fix jumps in background and menu

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     font-family: 'EB Garamond', serif;
     letter-spacing: 1px;
     background: url('img/background_wood.gif');
+    background-size: cover;
     color: #000000;
     height: 100%;
   }
@@ -113,7 +114,8 @@
   
   .menu-bg {
     width: 100%;
-    height: 100%;
+    height: 70dvh;
+    min-height: 100%;
     background-image: url('img/menu/menu-back.png');
     background-size: contain;
     background-repeat: no-repeat;
